Fixed on mobile css issues for search

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,12 +1,12 @@
-/* Style the `label` that we use to target the `.sidebar-checkbox` */
+/* Style the `label` that we use to target the `.sidebar-search */
 .sidebar-search {
   position: absolute;
-  top:  1rem;
-  left: 3rem;
+  top:  3rem;
+  left: .425rem;
   display: block;
   width: 2.2rem;
   padding: .5rem .7rem;
-  margin: 0 .65rem;
+  margin-left: .65rem;
   color: #000;
   background-color: #66d9ef;
   box-shadow: 0px 2px 0 .2px #268bd2;
@@ -49,7 +49,10 @@
 
 @media (min-width: 30.1em) {
   .sidebar-search {
+    left: 3rem;
+    margin: 0 .65rem;
     position: fixed;
+  	top: 1rem;
     width: 2.25rem;
   }
 }
